Creating first components

--- a/farmera/src/app/home/home.page.html
+++ b/farmera/src/app/home/home.page.html
@@ -1,14 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<farmera-header></farmera-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <farmera-team-card></farmera-team-card>
+  <farmera-alert></farmera-alert>
 </ion-content>
