--- a/farmera/src/theme/variables.scss
+++ b/farmera/src/theme/variables.scss
@@ -4,11 +4,11 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #263238;
+  --ion-color-primary-rgb: 38, 50, 56;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
+  --ion-color-primary-shade: #1a2327;
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
