feature: Adding basic template

--- a/farmera/src/app/component/header/header.component.html
+++ b/farmera/src/app/component/header/header.component.html
@@ -7,7 +7,7 @@
             <p>7 weeks old</p>
             <ion-button color="secondary" fill="outline">Manage Pigs</ion-button>
           </ion-col>
-          <ion-col>
+          <ion-col text-right>
               <p>Group: 20190214</p>
               <p>Started: 2018/09/01</p>
               <ion-button>LogBook</ion-button>
