--- a/farmera/src/app/home/home.page.html
+++ b/farmera/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <farmera-header></farmera-header>
 
-<ion-content>
-  <farmera-team-card></farmera-team-card>
+<ion-content padding>
+  <farmera-team-card margin-bottom	></farmera-team-card>
   <farmera-alert></farmera-alert>
 </ion-content>
