--- a/farmera/src/app/component/alert/alert.component.html
+++ b/farmera/src/app/component/alert/alert.component.html
@@ -1,3 +1,17 @@
-<p>
-  alert works!
-</p>
+<ion-title>Alerts (1)</ion-title>
+<ion-card>
+  <ion-card-content>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-card-title>Water cons. alert</ion-card-title>
+          <p>0.48 gal avg. per day <span class="danger">2 hours ago</span> </p>
+        </ion-col>
+        <ion-col text-right size="4">
+            <i class="material-icons">vibration</i>
+            <ion-toggle float-right checked="false"></ion-toggle>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card-content>
+</ion-card>
