feature: Header as Common Module

--- a/farmera/src/app/component/header/header.component.html
+++ b/farmera/src/app/component/header/header.component.html
@@ -1,18 +1,22 @@
-<ion-header >
+<ion-header>
   <ion-toolbar color="primary">
-      <ion-grid>
-        <ion-row>
-          <ion-col>
-            <h4>1,345 pigs</h4>
-            <p>7 weeks old</p>
-            <ion-button color="secondary" fill="outline">Manage Pigs</ion-button>
-          </ion-col>
-          <ion-col text-right>
-              <p>Group: 20190214</p>
-              <p>Started: 2018/09/01</p>
-              <ion-button>LogBook</ion-button>
-            </ion-col>
-        </ion-row>
-      </ion-grid>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <h4>1,345 pigs</h4>
+          <p>7 weeks old</p>
+          <ion-button color="secondary" fill="outline">Manage Pigs</ion-button>
+        </ion-col>
+        <ion-col text-right>
+          <p>Group: 20190214</p>
+          <p>Started: 2018/09/01</p>
+          <ion-button
+            [routerLink]="['/logbook']"
+            routerLinkActive="router-link-active">
+            LogBook
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
