--- a/farmera/src/app/component/team-card/team-card.component.html
+++ b/farmera/src/app/component/team-card/team-card.component.html
@@ -4,9 +4,11 @@
     <ion-grid>
       <ion-row>
         <ion-col size="8">
-            <ion-avatar float-left >
-                <ion-img src="https://randomuser.me/api/portraits/thumb/men/38.jpg"></ion-img>
-            </ion-avatar>
+          <ion-avatar float-left>
+            <ion-img
+              src="https://randomuser.me/api/portraits/thumb/men/38.jpg"
+            ></ion-img>
+          </ion-avatar>
           <ion-card-title>Alan Thompson</ion-card-title>
           <p>last check in: 11 hr ago</p>
         </ion-col>
