feature: Adding Action Sheet

--- a/farmera/src/app/component/header/header.component.html
+++ b/farmera/src/app/component/header/header.component.html
@@ -5,7 +5,7 @@
         <ion-col>
           <h4>1,345 pigs</h4>
           <p>7 weeks old</p>
-          <ion-button color="secondary" fill="outline">Manage Pigs</ion-button>
+          <ion-button color="secondary" (click)="presentActions()" fill="outline">Manage Pigs</ion-button>
         </ion-col>
         <ion-col text-right>
           <p>Group: 20190214</p>
