--- a/farmera/src/app/home/home.page.html
+++ b/farmera/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <farmera-header></farmera-header>
 
-<ion-content padding>
-  <farmera-team-card margin-bottom></farmera-team-card>
+<ion-content  class="ion-padding">
+  <farmera-team-card class="ion-margin-bottom"></farmera-team-card>
   <farmera-alert></farmera-alert>
 </ion-content>
