--- a/farmera/src/app/component/alert/alert.component.html
+++ b/farmera/src/app/component/alert/alert.component.html
@@ -7,9 +7,9 @@
           <ion-card-title>Water cons. alert</ion-card-title>
           <p>0.48 gal avg. per day <span class="danger">2 hours ago</span></p>
         </ion-col>
-        <ion-col text-right size="4">
+        <ion-col class="ion-text-right" size="4">
           <i class="material-icons">vibration</i>
-          <ion-toggle float-right checked="false"></ion-toggle>
+          <ion-toggle class="ion-float-right" checked="false"></ion-toggle>
         </ion-col>
       </ion-row>
     </ion-grid>
