--- a/farmera/src/app/component/member/member.component.html
+++ b/farmera/src/app/component/member/member.component.html
@@ -1,6 +1,6 @@
 <ion-row>
     <ion-col size="8">
-      <ion-avatar float-left>
+      <ion-avatar class="ion-float-left">
         <ion-img
           [src]="Member.avatar"
         ></ion-img>
@@ -8,7 +8,7 @@
       <ion-card-title>{{Member.name}} </ion-card-title>
       <p>last check in: {{Member.last_checkin}} hr ago</p>
     </ion-col>
-    <ion-col text-right size="4">
+    <ion-col class="ion-text-right" size="4">
       <ion-button class="button--rounded" color="primary">
         <i class="material-icons">message</i>
       </ion-button>
