feature: Adding style

--- a/farmera/src/app/component/alert/alert.component.html
+++ b/farmera/src/app/component/alert/alert.component.html
@@ -1,11 +1,14 @@
-<ion-title>Alerts (1)</ion-title>
-<ion-card>
+<h1 class="main-title">Alerts (1)</h1>
+<ion-card class="alert">
   <ion-card-content>
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-card-title>Water cons. alert</ion-card-title>
-          <p>0.48 gal avg. per day <span class="danger">2 hours ago</span></p>
+          <ion-card-title class="alert--name">
+              <span class="custom-icon"></span> 
+              Water cons. alert
+          </ion-card-title>
+          <p class="alert--description alert--danger">0.48 gal avg. per day <span>2 hours ago</span></p>
         </ion-col>
         <ion-col class="ion-text-right" size="4">
           <i class="material-icons">vibration</i>
