--- a/farmera/src/app/component/member/member.component.scss
+++ b/farmera/src/app/component/member/member.component.scss
@@ -1,13 +1,22 @@
-ion-avatar{
-    margin-right: 10px;
+@import "../../../theme/common.scss";
+.person{
+    .img--avatar{
+        @extend .circle-size;
+        margin-right: 5px;
+    }
+    .name{
+        font-size: 16px;
+        font-weight: 500;
+    }
+    .lastcheckin{
+        font-size: 14px;
+    }
 }
-.button--rounded{
-    --border-radius: 50%;
-    height:50px; 
-    width:50px;
-} 
-.img--avatar{
-    --border-radius: 50%;
-    height:50px; 
-    width:50px;
+.button{
+    &--rounded{
+        @extend .circle-size;
+        --border-color : #212121;
+        color: #212121;
+    } 
 }
+
