--- a/farmera/src/theme/variables.scss
+++ b/farmera/src/theme/variables.scss
@@ -13,11 +13,11 @@
 :root {
   /** primary **/
   --ion-font-family: 'Roboto';
-  --ion-color-primary: #263238;
+  --ion-color-primary: #d1da59;
   --ion-color-primary-rgb: 38, 50, 56;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #1a2327;
+  --ion-color-primary-shade: #d1da59;
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
@@ -85,9 +85,6 @@
   --ion-color-light-tint: #f5f6f9;
 }
 
-
-
-
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
@@ -115,4 +112,8 @@
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   font-feature-settings: 'liga';
+}
+.card-content-ios{
+  padding-left: 0px;
+  padding-right:0px;
 }
