--- a/farmera/src/theme/common.scss
+++ b/farmera/src/theme/common.scss
@@ -1,6 +1,6 @@
 $card-shadow: 0px -1px 22px rgba(38, 50, 56, 0.1);
 $card-radius : 20px;
-
+$gradient: linear-gradient( 232deg, #4b626e, #263232 );
 
 .circle-size {
     width : 41px;
