--- a/farmera/src/theme/variables.scss
+++ b/farmera/src/theme/variables.scss
@@ -13,10 +13,10 @@
 :root {
   /** primary **/
   --ion-font-family: 'Roboto';
-  --ion-color-primary: #d1da59;
+  --ion-color-primary: #bac346;
   --ion-color-primary-rgb: 38, 50, 56;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-contrast: #323c39;
+  --ion-color-primary-contrast-rgb: 50, 60, 57;
   --ion-color-primary-shade: #d1da59;
   --ion-color-primary-tint: #4c8dff;
 
