feature: Adding logout

--- a/farmera/src/app/home/home.page.html
+++ b/farmera/src/app/home/home.page.html
@@ -1,6 +1,8 @@
 <farmera-header></farmera-header>
 
 <ion-content  class="ion-padding">
+  <farmera-tabs></farmera-tabs>
   <farmera-team-card class="ion-margin-bottom"></farmera-team-card>
   <farmera-alert></farmera-alert>
 </ion-content>
+
