--- a/farmera/src/app/auth/auth.page.html
+++ b/farmera/src/app/auth/auth.page.html
@@ -42,7 +42,7 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col size="3"  offset="3">
+        <ion-col  size-sm="6" size-md="3"   offset-md="3">
           <ion-button
             type="button"
             fill="clear"
@@ -52,7 +52,7 @@
             Go to {{ isLogin ? 'Signup' : 'Login' }}
           </ion-button>
         </ion-col>
-        <ion-col size="3">
+        <ion-col  size-sm="6" size-md="3">
             <ion-button
               type="submit"
               expand="block"
