--- a/farmera/src/app/component/header/header.component.scss
+++ b/farmera/src/app/component/header/header.component.scss
@@ -53,6 +53,9 @@
                 background-size: cover;
                 background-repeat: no-repeat;
             }
+            .material-icons{
+                margin-right: 14px;
+            }
         }
     }
 }
